# subgen-whisperx

./: .gitattributes  .gitignore  LICENSE  Readme.md  activate_venv.ps1  activate_venv.sh  init_env.ps1  init_env.sh  log_format.json  main.py  pyproject.toml  requirements.txt  subgen_whisperx.py  test.ipynb  test_gui.py
objects/: app_options.py  audio_extractor.py  audiofile.py  media.py  mediafile.py  options.py
scripts/: activate_venv.ps1  hook_dll.py
test_files/: README.md
tests/: check_dll_loading.py  test_audio_extractor.py  test_audio_extractor_integration.py  test_dll_loading.py  test_media.py  test_options.py  test_options_fuzzing.py  test_subgen_whisperx.py
utils/: __init__.py  audio_extractor.py  constants.py  exceptions.py  sanitize.py  sodll.py  timer.py
