[project]
name = "subgen-whisperx"
version = "0.2.0"
description = "Subtitle generator using WhisperX"
authors = [
    { name = "Protik Banerji", email = "protik09@noreply.github.com" }
]
dependencies = [
    "pyinstaller>=6.12.0",
    "ffmpeg",
    "ffmpeg-python",
    "srt",
    "coloredlogs",
    "torchaudio",
    "torch",
    "torchvision",
    "whisperx",
]
requires-python = "==3.10.16"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    "mypy",
]
requirements-txt = true

[tool.rye.sources]
extra-index-urls = ["https://download.pytorch.org/whl/cu126"]