[project]
name = "subgen-whisperx"
version = "0.2.0"
description = "Subtitle generator using WhisperX"
authors = [
    { name = "Protik Banerji", email = "protik09@noreply.github.com" }
]
requires-python = "==3.10.16"
dependencies = [
    "pyinstaller>=6.12.0",
    "ffmpeg-python",
    "srt",
    "coloredlogs",
    "torchaudio==2.6.0+cu126",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "whisperx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    "mypy",
]
requirements-txt = true

[tool.rye.sources]
extra-index-urls = ["https://download.pytorch.org/whl/cu126"]